--- a/.editorconfig
+++ b/.editorconfig
@@ -15,8 +15,9 @@ indent_size = 2
 indent_style = space
 trim_trailing_whitespace = true
 
-[*.md]
+[*.{md,tex}]
 indent_size = 4
 
 [Makefile]
 indent_style = tab
+indent_size = 4
